--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 香蕉三千
 description: Do it, show it, enjoy it.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/banana3000/banana3000.github.io/blob/master/images/love.png
 
 #
 # Flags below are optional
@@ -26,7 +26,7 @@ footer-links:
   linkedin:
   pinterest: 
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter: banana3000x
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
