--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 香蕉三千
 description: Do it, show it, enjoy it.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/banana3000/banana3000.github.io/master/images/love.png
+avatar: https://raw.githubusercontent.com/banana3000/banana3000.github.io/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
